[package]
name = "dcvpn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-soft = "0.6"
block-modes = "0.8"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tun = "0.5"
ipnet = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
